--- a/platforms/browser/www/css/sass/forgotPassword.scss
+++ b/platforms/browser/www/css/sass/forgotPassword.scss
@@ -22,7 +22,7 @@
             color: $primaryColorRed;
         }
         &:last-child{
-            text-align: center;
+       //     text-align: center;
         }
     }
 }
