--- a/platforms/browser/www/css/sass/login.scss
+++ b/platforms/browser/www/css/sass/login.scss
@@ -28,8 +28,8 @@
             color: $primaryColorRed;
              }
         }
-        &:last-child{
-            text-align: center;
+        #forgotPasswordLink{
+            margin-left: 25%;
         }
      }
     }
